# Music-Platform

./: .gitignore  README.md
musicplatform/: pyproject.toml
musicplatform/musicplatform/: RESULTS.md  conftest.py  pytest.ini
musicplatform/musicplatform/albums/: admin.py  filters.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
musicplatform/musicplatform/albums/migrations/: 0001_initial.py  0002_album_is_approved.py  0003_album_created_album_modified.py  0004_song.py  0005_alter_song_audio.py
musicplatform/musicplatform/albums/tests/: test_endpoints.py  test_models.py  test_serializers.py
musicplatform/musicplatform/artists/: admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
musicplatform/musicplatform/artists/migrations/: 0001_initial.py  0002_alter_artist_social_link.py
musicplatform/musicplatform/artists/tests/: test_endpoints.py  test_models.py
musicplatform/musicplatform/authentication/: forms.py  serializers.py  urls.py  views.py
musicplatform/musicplatform/authentication/tests/: test_enpoints.py
musicplatform/musicplatform/musicplatform/: celery.py  settings.py  tasks.py  urls.py
musicplatform/musicplatform/templates/: base.html
musicplatform/musicplatform/templates/albums/: album_form.html
musicplatform/musicplatform/templates/artists/: artist_form.html  artist_list.html
musicplatform/musicplatform/templates/auth/: login.html  signup.html
musicplatform/musicplatform/users/: admin.py  models.py  serializers.py  urls.py  views.py
musicplatform/musicplatform/users/tests/: test_endpoints.py
(+1 files in other folders)
